# controllers/organization/permission/getPermissionByUser.controller.js
@@ -1,0 +1,25 @@
+const Member = require("@/models/organization/member.model");
+
+const getPermissionByUserController = async (req, res) => {
+    const { organization } = req.query;
+
+    try{
+        const permission = await Member
+        .findOne({ user: req.user._id, organization: organization }, {'permissions':1, "_id": 0})
+        
+        .populate({
+            path: "permission",
+            select: ["name", "isAdmin", "features"],
+            populate: {
+                path: "features.feature",
+                select: ["name", "key"]
+            }
+        })
+
+        return res.json({ permission: permission.permission, success: true, error: "", message: "User permission fetched successfully." });
+    } catch(error) {
+        return res.json({ permission: null, success: false, error: `Error: ${error}`, message: "" });
+    }
+}
+
+module.exports = getPermissionByUserController;
